# threat-classifier

./: .gitignore  GATE_2_TRUST_BOUNDARIES.md  GATE_3_ADVERSARIAL_ML.md  GATE_4_TRAINING_DATA_AND_API.md  README.md  cli.py  eval_sc2.py  pyproject.toml  requirements-dev.txt  requirements-train.txt  requirements.txt  train.py
tests/: test_classify.py  test_inference.py  test_normalise.py  test_train.py
threat_classifier/: __init__.py  inference.py  models.py  normalise.py
